--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+index.html
+```html
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -178,12 +180,12 @@
                 <div class="text-center max-w-3xl mx-auto">
                      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-slate-900">あなたのメリットを今すぐ診断</h2>
                      <p class="text-slate-600 leading-relaxed">
-                         多くの方がご自身の役員報酬から税金や社会保険料が引かれた「手取り」で、毎月の家賃を支払っています。この「個人負担の家賃」を、役員社宅制度を使って「法人の経費」に切り替えるだけで、法人・個人双方に大きなキャッシュフローが生まれます。このシミュレーターで、そのインパクトを体感してください。
+                         多くの方がご自身の役員報酬から税金や社会保険料が引かれた「手取り」で、毎月の家賃を支払っています。この「個人負担の家[...]
                      </p>
                 </div>
 
                 <div class="text-center text-xs text-slate-500 my-8 max-w-2xl mx-auto border-t border-b border-slate-200 py-2">
-                    <p>【シミュレーションの主な前提】 法人税率: 30% / 社会保険料率: 30%（法人・個人合計） / 所得税・住民税は年収に応じた日本の標準的な税率・控除を適用して算出しています。</p>
+                    <p>【シミュレーションの主な前提】 法人税率: 30% / 社会保険料率: 30%（法人・個人合計） / 所得税・住民税は年収に応じた日本の標準[...]
                 </div>
 
                 <div id="simulator" class="bg-white p-6 md:p-8 rounded-2xl shadow-lg max-w-2xl mx-auto">
@@ -192,8 +194,8 @@
                         <div>
                             <label for="compensation-input" class="block text-sm font-medium text-slate-700 mb-2">現在の役員報酬（月額）</label>
                             <div class="flex items-center space-x-4">
-                                <input type="range" id="compensation-slider" min="200000" max="3000000" step="10000" value="1000000" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-pointer">
-                                <input type="text" id="compensation-input" value="1,000,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" inputmode="numeric">
+                                <input type="range" id="compensation-slider" min="200000" max="3000000" step="10000" value="1000000" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-po[...]
+                                <input type="text" id="compensation-input" value="1,000,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:rin[...]
                                 <span class="text-sm">円</span>
                             </div>
                         </div>
@@ -201,7 +203,7 @@
                             <label for="rent-input" class="block text-sm font-medium text-slate-700 mb-2">現在の個人契約家賃（月額）</label>
                             <div class="flex items-center space-x-4">
                                 <input type="range" id="rent-slider" min="100000" max="1000000" step="10000" value="300000" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-pointer">
-                                <input type="text" id="rent-input" value="300,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" inputmode="numeric">
+                                <input type="text" id="rent-input" value="300,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-5[...]
                                 <span class="text-sm">円</span>
                             </div>
                         </div>
@@ -255,8 +257,8 @@
                 </div>
                 
                 <div class="mt-12 text-center">
-                    <p class="text-slate-600 mb-6 max-w-xl mx-auto">弊社のサービスではシミュレーションよりもさらにお得になる仕組みを設けております。<br>もっと経費を有効に計上したい個人事業主の方もぜひご相談ください</p>
-                     <a href="https://409ilc.share-na2.hsforms.com/2uQu4eF7jQjmvL0CEcsKaIQ" target="_blank" class="inline-block bg-slate-800 text-white font-bold py-3 px-10 rounded-lg hover:bg-slate-900 transition duration-300 text-lg shadow-md hover:shadow-lg">
+                    <p class="text-slate-600 mb-6 max-w-xl mx-auto">弊社のサービスではシミュレーションよりもさらにお得になる仕組みを設けております。<br>もっ[...]
+                     <a href="https://409ilc.share-na2.hsforms.com/2uQu4eF7jQjmvL0CEcsKaIQ" target="_blank" class="inline-block bg-slate-800 text-white font-bold py-3 px-10 rounded-lg hover:bg-slate-9[...]
                         お問い合わせはこちら
                     </a>
                 </div>
@@ -267,9 +269,10 @@
     <footer class="bg-slate-800 text-white mt-16 py-8">
         <div class="container mx-auto text-center text-sm">
             <p class="mb-2">株式会社グロースプロパティ</p>
+            <p>https://growth-property.jp/</p>
             <p>本シミュレーションに関するご相談・お問い合わせは担当者までご連絡ください。</p>
             <p class="mt-4 text-xs text-slate-400">
-                出典：<a href="https://www.nta.go.jp/taxes/shiraberu/taxanswer/gensen/2600.htm" target="_blank" rel="noopener noreferrer" class="underline hover:text-slate-200">国税庁 タックスアンサー No.2600 役員に社宅などを貸したとき</a>
+                出典：<a href="https://www.nta.go.jp/taxes/shiraberu/taxanswer/gensen/2600.htm" target="_blank" rel="noopener noreferrer" class="underline hover:text-slate-200">国税庁 タック[...]
             </p>
         </div>
     </footer>
