--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-index.html
-```html
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -22,7 +20,7 @@ index.html
       - Unique Benefit: Styled HTML/CSS card (No SVG/Mermaid). Goal: Compare.
       - Interactive Simulator: HTML form + JS calculation. Goal: Inform/Personalize.
       - CTA: Styled HTML button (No SVG/Mermaid). Goal: Inform.
-      Color Palette: Merged "Energetic & Playful" with user-provided "Slate/Blue" for the simulator.
+      Color Palette: Changed to a corporate blue and slate gray theme to match the official website.
       Confirmation: No SVG graphics or Mermaid JS are used in this document.
     -->
     <style>
@@ -30,10 +28,8 @@ index.html
             font-family: 'Noto Sans JP', 'Inter', sans-serif;
             background-color: #f8fafc; /* bg-slate-50 */
         }
-        .gradient-text {
-            background: linear-gradient(to right, #00C2FF, #FF4B3E);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+        .brand-text {
+           color: #2563eb; /* Corporate Blue */
         }
         .card {
             background-color: white;
@@ -99,7 +95,7 @@ index.html
     <div class="max-w-4xl mx-auto p-4 sm:p-6 lg:p-8">
 
         <header class="text-center my-12">
-            <h1 class="text-4xl md:text-5xl font-black gradient-text">その家賃、経費にしませんか？</h1>
+            <h1 class="text-4xl md:text-5xl font-black brand-text">その家賃、経費にしませんか？</h1>
             <p class="mt-4 text-lg text-gray-600">法人経営者・役員の方、必見です。</p>
         </header>
 
@@ -107,7 +103,7 @@ index.html
             
             <section id="benefits">
                 <div class="text-center mb-8">
-                     <h2 class="text-2xl md:text-3xl font-bold">家賃の<span class="text-[#FF4B3E]">最大90%</span>を経費に。</h2>
+                     <h2 class="text-2xl md:text-3xl font-bold">家賃の<span class="text-slate-700">最大90%</span>を経費に。</h2>
                      <p class="text-gray-600 mt-2">国が認める「役員社宅制度」で、これだけ負担が変わります。</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -127,20 +123,20 @@ index.html
             </section>
 
             <section id="impact">
-                <div class="card bg-[#1F2937] text-white text-center p-6 md:p-8">
-                    <h2 class="text-2xl md:text-3xl font-bold mb-4">【家賃30万円の場合】2年間の<span class="text-[#00C2FF]">合計インパクト</span>は…</h2>
-                    <p class="text-gray-300 max-w-2xl mx-auto mb-8">個人負担の削減と法人税の節税効果を合わせると、これだけのメリットが生まれます。</p>
+                <div class="card bg-[#1e293b] text-white text-center p-6 md:p-8">
+                    <h2 class="text-2xl md:text-3xl font-bold mb-4">【家賃30万円の場合】2年間の<span class="text-blue-400">合計インパクト</span>は…</h2>
+                    <p class="text-slate-300 max-w-2xl mx-auto mb-8">個人負担の削減と法人税の節税効果を合わせると、これだけのメリットが生まれます。</p>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 mb-8">
-                        <div class="p-6 bg-gray-700 rounded-lg">
-                            <p class="text-lg text-gray-400">個人の負担削減額</p>
-                            <p class="text-3xl md:text-4xl font-bold text-[#00C2FF]">¥6,480,000</p>
+                        <div class="p-6 bg-slate-700 rounded-lg">
+                            <p class="text-lg text-slate-400">個人の負担削減額</p>
+                            <p class="text-3xl md:text-4xl font-bold text-blue-400">¥6,480,000</p>
                         </div>
-                        <div class="p-6 bg-gray-700 rounded-lg">
-                            <p class="text-lg text-gray-400">法人税の削減額 (税率30%)</p>
-                            <p class="text-3xl md:text-4xl font-bold text-[#00C2FF]">¥1,944,000</p>
+                        <div class="p-6 bg-slate-700 rounded-lg">
+                            <p class="text-lg text-slate-400">法人税の削減額 (税率30%)</p>
+                            <p class="text-3xl md:text-4xl font-bold text-blue-400">¥1,944,000</p>
                         </div>
                     </div>
-                    <div class="bg-gradient-to-r from-[#FF8A00] to-[#FF4B3E] p-6 rounded-lg transform hover:scale-105 transition-transform duration-300">
+                    <div class="bg-blue-600 p-6 rounded-lg transform hover:scale-105 transition-transform duration-300">
                         <p class="text-xl font-bold">2年間の合計削減インパクト</p>
                         <p class="text-4xl sm:text-5xl md:text-6xl font-black tracking-tighter">¥8,424,000</p>
                     </div>
@@ -149,28 +145,28 @@ index.html
 
              <section id="social-security-savings">
                 <div class="card text-center">
-                    <h2 class="text-2xl md:text-3xl font-bold mb-4">さらに、<span class="gradient-text">手取り額そのもの</span>も増やせます</h2>
+                    <h2 class="text-2xl md:text-3xl font-bold mb-4">さらに、<span class="brand-text">手取り額そのもの</span>も増やせます</h2>
                     <p class="text-gray-600 max-w-2xl mx-auto mb-6">家賃負担分、役員報酬を最適化することで、個人の社会保険料や税金の負担が軽くなります。</p>
-                    <div class="bg-gray-100 p-6 rounded-lg">
+                    <div class="bg-slate-100 p-6 rounded-lg">
                         <p class="text-lg">例えば、役員報酬月額60万円の方がこの制度を利用すると…</p>
                         <p class="my-4 text-2xl font-bold">年間の税金・社会保険料を…</p>
-                        <p class="text-5xl md:text-6xl font-black text-[#FF4B3E] tracking-tighter whitespace-nowrap">約<span class="text-7xl md:text-8xl">96</span>万円</p>
+                        <p class="text-5xl md:text-6xl font-black text-blue-600 tracking-tighter whitespace-nowrap">約<span class="text-7xl md:text-8xl">96</span>万円</p>
                         <p class="text-2xl font-bold mt-4">削減することも可能です！</p>
                     </div>
-                     <p class="text-xs text-gray-500 mt-4">※ご年齢・ご家族構成・お住まいの地域等により変動します。上記は試算の一例です。</p>
+                     <p class="text-xs text-slate-500 mt-4">※ご年齢・ご家族構成・お住まいの地域等により変動します。上記は試算の一例です。</p>
                 </div>
             </section>
 
             <section id="usp">
                  <div class="card text-center">
-                    <h2 class="text-2xl md:text-3xl font-bold mb-4">弊社だけの強み: <span class="gradient-text">家具・家電も経費化</span></h2>
+                    <h2 class="text-2xl md:text-3xl font-bold mb-4">弊社だけの強み: <span class="brand-text">家具・家電も経費化</span></h2>
                     <p class="text-gray-600 max-w-2xl mx-auto mb-6">通常なら経費にできない、インテリアの費用までサポートします。</p>
                     <div class="flex flex-wrap justify-center items-center gap-4 text-lg font-semibold text-gray-700">
-                        <span class="bg-blue-100 text-blue-800 py-2 px-4 rounded-full">🛋️ ソファ</span>
-                        <span class="bg-blue-100 text-blue-800 py-2 px-4 rounded-full">📺 大型テレビ</span>
-                        <span class="bg-blue-100 text-blue-800 py-2 px-4 rounded-full">🛏️ ベッド</span>
-                        <span class="bg-blue-100 text-blue-800 py-2 px-4 rounded-full">🧊 冷蔵庫</span>
-                        <span class="bg-blue-100 text-blue-800 py-2 px-4 rounded-full">➕ その他多数</span>
+                        <span class="bg-slate-200 text-slate-800 py-2 px-4 rounded-full">🛋️ ソファ</span>
+                        <span class="bg-slate-200 text-slate-800 py-2 px-4 rounded-full">📺 大型テレビ</span>
+                        <span class="bg-slate-200 text-slate-800 py-2 px-4 rounded-full">🛏️ ベッド</span>
+                        <span class="bg-slate-200 text-slate-800 py-2 px-4 rounded-full">🧊 冷蔵庫</span>
+                        <span class="bg-slate-200 text-slate-800 py-2 px-4 rounded-full">➕ その他多数</span>
                     </div>
                  </div>
             </section>
@@ -180,12 +176,12 @@ index.html
                 <div class="text-center max-w-3xl mx-auto">
                      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-slate-900">あなたのメリットを今すぐ診断</h2>
                      <p class="text-slate-600 leading-relaxed">
-                         多くの方がご自身の役員報酬から税金や社会保険料が引かれた「手取り」で、毎月の家賃を支払っています。この「個人負担の家[...]
+                         多くの方がご自身の役員報酬から税金や社会保険料が引かれた「手取り」で、毎月の家賃を支払っています。この「個人負担の家賃」を、役員社宅制度を使って「法人の経費」に切り替えるだけで、法人・個人双方に大きなメリットが生まれます。このシミュレーターで、そのインパクトを体感してください。
                      </p>
                 </div>
 
                 <div class="text-center text-xs text-slate-500 my-8 max-w-2xl mx-auto border-t border-b border-slate-200 py-2">
-                    <p>【シミュレーションの主な前提】 法人税率: 30% / 社会保険料率: 30%（法人・個人合計） / 所得税・住民税は年収に応じた日本の標準[...]
+                    <p>【シミュレーションの主な前提】 法人税率: 30% / 社会保険料率: 30%（法人・個人合計） / 所得税・住民税は年収に応じた日本の標準的な税率・控除を適用して算出しています。</p>
                 </div>
 
                 <div id="simulator" class="bg-white p-6 md:p-8 rounded-2xl shadow-lg max-w-2xl mx-auto">
@@ -194,8 +190,8 @@ index.html
                         <div>
                             <label for="compensation-input" class="block text-sm font-medium text-slate-700 mb-2">現在の役員報酬（月額）</label>
                             <div class="flex items-center space-x-4">
-                                <input type="range" id="compensation-slider" min="200000" max="3000000" step="10000" value="1000000" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-po[...]
-                                <input type="text" id="compensation-input" value="1,000,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:rin[...]
+                                <input type="range" id="compensation-slider" min="200000" max="3000000" step="10000" value="1000000" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-pointer">
+                                <input type="text" id="compensation-input" value="1,000,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" inputmode="numeric">
                                 <span class="text-sm">円</span>
                             </div>
                         </div>
@@ -203,14 +199,14 @@ index.html
                             <label for="rent-input" class="block text-sm font-medium text-slate-700 mb-2">現在の個人契約家賃（月額）</label>
                             <div class="flex items-center space-x-4">
                                 <input type="range" id="rent-slider" min="100000" max="1000000" step="10000" value="300000" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-pointer">
-                                <input type="text" id="rent-input" value="300,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-5[...]
+                                <input type="text" id="rent-input" value="300,000" class="w-32 text-right bg-slate-100 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" inputmode="numeric">
                                 <span class="text-sm">円</span>
                             </div>
                         </div>
                     </div>
                     <div class="mt-8 text-center">
                         <button id="calculate-btn" class="bg-blue-600 text-white font-bold py-3 px-10 rounded-lg hover:bg-blue-700 transition duration-300 text-lg shadow-md hover:shadow-lg">
-                            創出されるキャッシュフローを計算
+                            節約できる金額を計算
                         </button>
                     </div>
                 </div>
@@ -219,9 +215,9 @@ index.html
                     <div class="bg-white p-6 md:p-8 rounded-2xl shadow-lg">
                         <h3 class="text-2xl md:text-3xl font-bold mb-6 text-center text-slate-900">シミュレーション結果</h3>
                         <div class="text-center bg-blue-50 border-l-4 border-blue-500 p-6 rounded-lg mb-8">
-                            <p class="text-lg text-slate-700">役員社宅制度を導入することで、新たに創出されるキャッシュフローは...</p>
+                            <p class="text-lg text-slate-700">役員社宅制度を導入することで、節約できる金額の合計は...</p>
                             <p class="text-4xl md:text-5xl font-bold text-blue-600 my-4">年間 <span id="total-savings">0</span> 円</p>
-                            <p class="text-slate-600">この資金が、お客様の未来を守る新たな保険原資となります。</p>
+                            <p class="text-slate-600">この資金が社長の手元に残ります。</p>
                         </div>
                         <div class="grid md:grid-cols-3 gap-6 text-center">
                             <div class="bg-slate-100 p-4 rounded-lg">
@@ -256,10 +252,14 @@ index.html
                     </div>
                 </div>
                 
-                <div class="mt-12 text-center">
-                    <p class="text-slate-600 mb-6 max-w-xl mx-auto">弊社のサービスではシミュレーションよりもさらにお得になる仕組みを設けております。<br>もっ[...]
-                     <a href="https://409ilc.share-na2.hsforms.com/2uQu4eF7jQjmvL0CEcsKaIQ" target="_blank" class="inline-block bg-slate-800 text-white font-bold py-3 px-10 rounded-lg hover:bg-slate-9[...]
-                        お問い合わせはこちら
+                <div class="mt-16 text-center bg-slate-100 p-8 rounded-2xl">
+                    <h3 class="text-xl md:text-2xl font-bold text-slate-900 mb-4">さらに大きなメリットがあります</h3>
+                    <p class="text-slate-600 mb-6 max-w-xl mx-auto">弊社のサービスではシミュレーションよりもさらにお得になる仕組みを設けております。<br>もっと経費を有効に計上したい個人事業主の方もぜひご相談ください。</p>
+                     <a href="https://409ilc.share-na2.hsforms.com/2uQu4eF7jQjmvL0CEcsKaIQ" target="_blank" class="inline-block bg-blue-600 text-white font-bold py-4 px-12 rounded-lg hover:bg-blue-700 transition duration-300 text-lg shadow-lg hover:shadow-xl transform hover:scale-105">
+                        <span class="flex items-center justify-center">
+                            <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+                            <span>無料相談・お問い合わせはこちら</span>
+                        </span>
                     </a>
                 </div>
             </section>
@@ -269,11 +269,11 @@ index.html
     <footer class="bg-slate-800 text-white mt-16 py-8">
         <div class="container mx-auto text-center text-sm">
             <p class="mb-2">株式会社グロースプロパティ</p>
-            <p>https://growth-property.jp/</p>
-            <p>本シミュレーションに関するご相談・お問い合わせは担当者までご連絡ください。</p>
-            <p class="mt-4 text-xs text-slate-400">
-                出典：<a href="https://www.nta.go.jp/taxes/shiraberu/taxanswer/gensen/2600.htm" target="_blank" rel="noopener noreferrer" class="underline hover:text-slate-200">国税庁 タック[...]
-            </p>
+            <p class="mb-4">本シミュレーションに関するご相談・お問い合わせは担当者までご連絡ください。</p>
+            <div class="space-x-6">
+                <a href="https://growth-property.jp/" target="_blank" rel="noopener noreferrer" class="underline hover:text-slate-200">弊社ホームページ</a>
+                <a href="https://www.nta.go.jp/taxes/shiraberu/taxanswer/gensen/2600.htm" target="_blank" rel="noopener noreferrer" class="underline hover:text-slate-200">出典：国税庁</a>
+            </div>
         </div>
     </footer>
 
@@ -318,7 +318,7 @@ index.html
             labels: ['会社負担 (90%)', '個人負担 (10%)'],
             datasets: [{
                 data: [270000, 30000],
-                backgroundColor: ['#00C2FF', '#FF4B3E'],
+                backgroundColor: ['#2563eb', '#9ca3af'],
                 borderColor: '#FFFFFF',
                 borderWidth: 4,
             }]
@@ -358,7 +358,7 @@ index.html
             datasets: [{
                 label: '2年間の累計個人負担額 (円)',
                 data: [7200000, 720000],
-                backgroundColor: ['#FF8A00', '#00C2FF'],
+                backgroundColor: ['#6b7280', '#2563eb'],
                 borderRadius: 8,
             }]
         },
@@ -428,7 +428,7 @@ index.html
             const parsed = parseFloat(String(str).replace(/,/g, ''));
             return isNaN(parsed) ? 0 : parsed;
         };
-        const floorToNearestTen = (num) => Math.floor(num / 10) * 10;
+        const ceilToNearestTen = (num) => Math.ceil(num / 10) * 10;
 
         function syncInputs(slider, input) {
             input.value = formatCurrency(slider.value);
@@ -474,10 +474,10 @@ index.html
 
             const totalAnnualSavings = annualCorporateTaxSaving + annualSocialInsuranceSaving + annualIncomeTaxSaving;
 
-            totalSavingsEl.textContent = formatCurrency(floorToNearestTen(totalAnnualSavings));
-            corporateTaxSavingEl.textContent = formatCurrency(floorToNearestTen(annualCorporateTaxSaving));
-            socialInsuranceSavingEl.textContent = formatCurrency(floorToNearestTen(annualSocialInsuranceSaving));
-            incomeTaxSavingEl.textContent = formatCurrency(floorToNearestTen(annualIncomeTaxSaving));
+            totalSavingsEl.textContent = formatCurrency(ceilToNearestTen(totalAnnualSavings));
+            corporateTaxSavingEl.textContent = formatCurrency(ceilToNearestTen(annualCorporateTaxSaving));
+            socialInsuranceSavingEl.textContent = formatCurrency(ceilToNearestTen(annualSocialInsuranceSaving));
+            incomeTaxSavingEl.textContent = formatCurrency(ceilToNearestTen(annualIncomeTaxSaving));
 
             resultsSection.classList.add('show');
         }
