--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       - Unique Benefit: Styled HTML/CSS card (No SVG/Mermaid). Goal: Compare.
       - Interactive Simulator: HTML form + JS calculation. Goal: Inform/Personalize.
       - CTA: Styled HTML button (No SVG/Mermaid). Goal: Inform.
-      Color Palette: Changed to a corporate blue and slate gray theme to match the official website.
+      Color Palette: Changed to a corporate blue and slate gray theme, with orange as a highlight color.
       Confirmation: No SVG graphics or Mermaid JS are used in this document.
     -->
     <style>
@@ -123,20 +123,20 @@
             </section>
 
             <section id="impact">
-                <div class="card bg-[#1e293b] text-white text-center p-6 md:p-8">
-                    <h2 class="text-2xl md:text-3xl font-bold mb-4">【家賃30万円の場合】2年間の<span class="text-blue-400">合計インパクト</span>は…</h2>
-                    <p class="text-slate-300 max-w-2xl mx-auto mb-8">個人負担の削減と法人税の節税効果を合わせると、これだけのメリットが生まれます。</p>
+                <div class="card border-2 border-blue-600 text-center p-6 md:p-8">
+                    <h2 class="text-2xl md:text-3xl font-bold mb-4">【家賃30万円の場合】2年間の<span class="brand-text">合計インパクト</span>は…</h2>
+                    <p class="text-slate-600 max-w-2xl mx-auto mb-8">個人負担の削減と法人税の節税効果を合わせると、これだけのメリットが生まれます。</p>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 mb-8">
-                        <div class="p-6 bg-slate-700 rounded-lg">
-                            <p class="text-lg text-slate-400">個人の負担削減額</p>
-                            <p class="text-3xl md:text-4xl font-bold text-blue-400">¥6,480,000</p>
+                        <div class="p-6 bg-slate-100 rounded-lg">
+                            <p class="text-lg text-slate-500">個人の負担削減額</p>
+                            <p class="text-3xl md:text-4xl font-bold brand-text">¥6,480,000</p>
                         </div>
-                        <div class="p-6 bg-slate-700 rounded-lg">
-                            <p class="text-lg text-slate-400">法人税の削減額 (税率30%)</p>
-                            <p class="text-3xl md:text-4xl font-bold text-blue-400">¥1,944,000</p>
+                        <div class="p-6 bg-slate-100 rounded-lg">
+                            <p class="text-lg text-slate-500">法人税の削減額 (税率30%)</p>
+                            <p class="text-3xl md:text-4xl font-bold brand-text">¥1,944,000</p>
                         </div>
                     </div>
-                    <div class="bg-blue-600 p-6 rounded-lg transform hover:scale-105 transition-transform duration-300">
+                    <div class="bg-[#FF8A00] text-white p-6 rounded-lg transform hover:scale-105 transition-transform duration-300">
                         <p class="text-xl font-bold">2年間の合計削減インパクト</p>
                         <p class="text-4xl sm:text-5xl md:text-6xl font-black tracking-tighter">¥8,424,000</p>
                     </div>
